--- a/index.html
+++ b/index.html
@@ -7,18 +7,26 @@
     <link rel="stylesheet" href="https://use.typekit.net/bdv1puz.css">
     <script src="script.js"></script>
     <link rel="shortcut icon" href="icons/circle.svg" type="image/x-icon">
-    <title>The Right to be Yourself</title>
+    <title>The Right to Be Yourself</title>
 </head>
 <body>
     <main id="main-container">
-        <div id="graph-background"></div>
-
         <section id="title">
-            <h1>The Right to be Yourself</h1>
+            <h1>The Right to Be Yourself</h1>
         </section>
-        <section id="intro">
-            <h2>The LGBTQ+ community is a diverse group of identities across the gender and sexual orientation spectrums.</h2>
-        </section>
+
+        <div id="intro-content" class="intro-content-top">
+            <h2 id="intro-text">The <em class="term" id="term-1">LGBTQ+ community</em> is a diverse group of identities across the <em class="term" id="term-2">gender identity</em> and <em class="term" id="term-3">sexual orientation</em> spectrums. Although they have existed across history and cultures, they still have to fight for their rights to this day.</h2>
+            <div class="definitions">
+                <div class="definition" id="definition-1">The <em>LGBTQ+ community</em> is also referred to as the LGBT, LGBTQIA+ community, and other variations which have increased and decreased in usage throughout history. Each letter corresponds with a specific identity, such as [L]esbian [G]ay, [B]isexual), and [T]ransgender. The + is commonly used to represent additional identities not included in this short acronym.</div>
+                <div class="definition" id="definition-2"><em>Gender identity</em> refers to one's internal sense of gender, which can be different from their sex assigned at birth. Another common term is gender expression, or how someone outwardly expresses their gender to others. When someone's gender does not align with their sex assigned at birth, they may refer to themselves with the broad terms of transgender or nonbinary, but many gender identity labels exist.</div>
+                <div class="definition" id="definition-3"><em>Sexual orientation</em> describes who you are sexually attracted to. However, you can also experience other forms of attraction such as romantic attraction which may be toward a different group than your sexual orientation. This can include the lack of sexual attraction (asexuality) or romantic attraction (aromantic), or attraction to multiple genders (bisexual/pansexual).</div>
+            </div>
+        </div>
+        <section class="intro-container"></section>
+        <section class="intro-container"></section>
+        <section class="intro-container"></section>
+        <section class="intro-container"></section>
 
         <section class="content content-layout-1" id="sect-1">
             <h2>People in younger generations are becoming more open about their identities than those in the past, and discovering who they are.</h2>
@@ -79,7 +87,7 @@
                 </figure>
                 <figcaption>
                     <p>The number of self-identified LGBTQ+ individuals has increased with newer generations. The graph displays the percentage of respondents in each generation who identified themselves as LGBTQ+ from only 1.1% in the Silent Generation to 24.7% in Gen Z, as collected in 2023.</p>
-                    <a target="_blank" href="https://news.gallup.com/poll/611864/lgbtq-identification.aspx">Source Data</a>
+                    <a target="_blank" href="https://news.gallup.com/poll/611864/lgbtq-identification.aspx">Source Data: Gallup LGBTQ+ Identification Poll</a>
                 </figcaption>
             </div>
         </section>
@@ -133,7 +141,7 @@
                 </figure>
                 <figcaption>
                     <p>Opinions about LGBTQ+ relationships are becoming more accepted in recent years in the US from 40% in 2001 to 64% in 2024. “Other” responses include “depends on situation”, “not a moral issue” and “no opinion”.</p>
-                    <a target="_blank" href="https://news.gallup.com/poll/646202/sex-relations-marriage-supported.aspx">Source Data</a>
+                    <a target="_blank" href="https://news.gallup.com/poll/646202/sex-relations-marriage-supported.aspx">Source Data: Gallup LGBTQ+ Moral Views Poll</a>
                 </figcaption>
             </div>
         </section>
@@ -175,7 +183,7 @@
                 </figure>
                 <figcaption>
                     <p>There has been an increasing number of bills introduced in state legislatures in recent years, from 42 in 2018 to 510 in 2023. In 2023, 84 of these bills were passed, which was 16% of those that were introduced.</p>
-                    <a target="_blank" href="https://www.cnn.com/politics/anti-lgbtq-plus-state-bill-rights-dg/index.html">Source Data</a>
+                    <a target="_blank" href="https://www.cnn.com/politics/anti-lgbtq-plus-state-bill-rights-dg/index.html">Source Data: CNN Anti-LGBTQ+ State Bill Rights</a>
                 </figcaption>
             </div>
         </section>
@@ -230,7 +238,7 @@
                 </figure>
                 <figcaption>
                     <p>Data from The Trevor Project shows the percentage of individuals who were physically threatened or harmed for their identity. The study was an online survey of over 30,000 individuals, aged 13-24 and living in the U.S.</p>
-                    <a target="_blank" href="https://www.thetrevorproject.org/survey-2022/#threatened-by-sexual-orientation">Source Data</a>
+                    <a target="_blank" href="https://www.thetrevorproject.org/survey-2022/#threatened-by-sexual-orientation">Source Data: The Trevor Project 2022 Survey</a>
                 </figcaption>
             </div>
         </section>
@@ -280,13 +288,23 @@
                 </figure>
                 <figcaption>
                     <p>The percentage of individuals who had any mental illness in the past year (2021 and 2022 average) is higher among females overall, as well as LGBTQ+ individuals. Straight men had the lowest prevalence at 18.1% and bisexual women had the highest prevalance at 53.9%.</p>
-                    <a target="_blank" href="https://www.samhsa.gov/newsroom/press-announcements/20230613/samhsa-releases-new-data-lesbian-gay-bisexual-behavioral-health">Source Data</a>
+                    <a target="_blank" href="https://www.samhsa.gov/newsroom/press-announcements/20230613/samhsa-releases-new-data-lesbian-gay-bisexual-behavioral-health">Source Data: SAMHSA 2021-2022 Behavioral Health Report</a>
                 </figcaption>
             </div>
         </section>
 
         <section id="outro">
-            <h2>And all of this harm is being done, just for the desire for someone to be their true self, open and honestly to themselves and the world. It doesn’t have to stay this way. Fight for legislation that protects LGBTQ+ rights. Fight against discrimination and violence. Fight for the right to be yourself.</h2>
+            <h2>All of this harm is being done, just for the desire for someone to be their true self, open and honestly to themselves and to the world. It doesn’t have to stay this way. We must fight for legislation that protects LGBTQ+ rights, fight against discrimination and violence, and fight for the right to be yourself.</h2>
+            <footer>
+                <div id="footer-label">Learn More & Support the Cause</div>
+                <div id="footer-links">
+                    <a target="_blank" href="https://glaad.org/">GLAAD</a>
+                    <a target="_blank" href="https://www.hrc.org/">Human Rights Campaign</a>
+                    <a target="_blank" href="https://www.thetrevorproject.org/">The Trevor Project</a>
+                    <a target="_blank" href="https://pridefoundation.org/">Pride Foundation</a>
+                    <a target="_blank" href="https://outrightinternational.org/">Outright International</a>
+                </div>
+            </footer>
         </section>
     </main>
 </body>
