v8 - restructure beginning only

--- a/index.html
+++ b/index.html
@@ -5,17 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/bdv1puz.css">
-    <script src="script.js"></script>
     <link rel="shortcut icon" href="icons/circle.svg" type="image/x-icon">
+    <script src="script.js"></script>
     <title>The Right to Be Yourself</title>
 </head>
 <body>
     <main id="main-container">
-        <section id="title">
+
+        <section class="content-1" id="title">
+            <div class="sticky-content">
+                <h1>The Right to Be Yourself</h1>
+            </div>
+            <div class="snap"></div>
+        </section>
+
+        <section class="content-4">
+            <div class="sticky-content" id="intro-content">
+                <h2 id="intro-text">The <em class="term" id="term-1">LGBTQ+ community</em> is a diverse group of identities across the <em class="term" id="term-2">gender identity</em> and <em class="term" id="term-3">sexual orientation</em> spectrums. Although they have existed across history and cultures, they still have to fight for their rights to this day.</h2>
+                <div class="definitions">
+                    <div class="definition" id="def-1">The <em>LGBTQ+ community</em> is also referred to as the LGBT, LGBTQIA+ community, and other variations which have increased and decreased in usage throughout history. Each letter corresponds with a specific identity, such as [L]esbian [G]ay, [B]isexual), and [T]ransgender. The + is commonly used to represent additional identities not included in this short acronym.</div>
+                    <div class="definition" id="def-2"><em>Gender identity</em> refers to one's internal sense of gender, which can be different from their sex assigned at birth. Another common term is gender expression, or how someone outwardly expresses their gender to others. When someone's gender does not align with their sex assigned at birth, they may refer to themselves with the broad terms of transgender or nonbinary, but many gender identity labels exist.</div>
+                    <div class="definition" id="def-3"><em>Sexual orientation</em> describes who you are sexually attracted to. However, you can also experience other forms of attraction such as romantic attraction which may be toward a different group than your sexual orientation. This can include the lack of sexual attraction (asexuality) or romantic attraction (aromantic), or attraction to multiple genders (bisexual/pansexual).</div>
+                </div>
+            </div>
+            <div class="snap"></div>
+            <div class="snap"></div>
+            <div class="snap"></div>
+            <div class="snap"></div>
+        </section>
+        <!-- <div class="scroll-snap"></div>
+        <div class="scroll-snap"></div>
+        <div class="scroll-snap"></div>
+
+        <div class="scroll-snap"></div>
+        <div class="scroll-snap"></div> -->
+
+        <!-- <section class="content-1" id="title">
             <h1>The Right to Be Yourself</h1>
         </section>
 
-        <div id="intro-content" class="intro-content-top">
+        <section class="content-4">
+            <h1>Four Long</h1>
+        </section>
+
+        <section class="content-2">
+            <h1>Two Long</h1>
+        </section> -->
+
+        <!-- <div id="intro-content" class="intro-content-top">
             <h2 id="intro-text">The <em class="term" id="term-1">LGBTQ+ community</em> is a diverse group of identities across the <em class="term" id="term-2">gender identity</em> and <em class="term" id="term-3">sexual orientation</em> spectrums. Although they have existed across history and cultures, they still have to fight for their rights to this day.</h2>
             <div class="definitions">
                 <div class="definition" id="definition-1">The <em>LGBTQ+ community</em> is also referred to as the LGBT, LGBTQIA+ community, and other variations which have increased and decreased in usage throughout history. Each letter corresponds with a specific identity, such as [L]esbian [G]ay, [B]isexual), and [T]ransgender. The + is commonly used to represent additional identities not included in this short acronym.</div>
@@ -63,23 +100,23 @@
                     <div class="key">
                         <div class="axis-title key-title">Identity</div>
                         <div>
-                            <div class="key-color" style="background-color: #8e8e8e;"></div>
+                            <div class="key-color" style="background-color: #c7c7c7;"></div>
                             <div class="key-label">Other</div>
                         </div>
                         <div>
-                            <div class="key-color" style="background-color: #ffd261;"></div>
+                            <div class="key-color" style="background-color: #ffe380;"></div>
                             <div class="key-label">Transgender</div>
                         </div>
                         <div>
-                            <div class="key-color" style="background-color: #d34c69;"></div>
+                            <div class="key-color" style="background-color: #de7c90;"></div>
                             <div class="key-label">Lesbian</div>
                         </div>
                         <div>
-                            <div class="key-color" style="background-color: #40adad;"></div>
+                            <div class="key-color" style="background-color: #73d9c6;"></div>
                             <div class="key-label">Gay</div>
                         </div>
                         <div>
-                            <div class="key-color" style="background-color: #79599e;"></div>
+                            <div class="key-color" style="background-color: #a483c9;"></div>
                             <div class="key-label">Bisexual</div>
                         </div>
                     </div>
@@ -126,15 +163,15 @@
                     <div class="key">
                         <div class="axis-title key-title">Moral Views</div>
                         <div>
-                            <div class="key-color" style="background-color: #40adad;"></div>
+                            <div class="key-color" style="background-color: #73d9c6;"></div>
                             <div class="key-label">Morally Okay</div>
                         </div>
                         <div>
-                            <div class="key-color" style="background-color: #ffd261;"></div>
+                            <div class="key-color" style="background-color: #ffe380;"></div>
                             <div class="key-label">Other</div>
                         </div>
                         <div>
-                            <div class="key-color" style="background-color: #d34c69;"></div>
+                            <div class="key-color" style="background-color: #de7c90;"></div>
                             <div class="key-label">Morally Wrong</div>
                         </div>
                     </div>
@@ -223,15 +260,15 @@
                     <div class="key">
                         <div class="axis-title key-title">Category</div>
                         <div>
-                            <div class="key-color" style="background-color: #ffd261;"></div>
+                            <div class="key-color" style="background-color: #ffe380;"></div>
                             <div class="key-label">Gender</div>
                         </div>
                         <div>
-                            <div class="key-color" style="background-color: #79599e;"></div>
+                            <div class="key-color" style="background-color: #a483c9;"></div>
                             <div class="key-label">Sexuality</div>
                         </div>
                         <div>
-                            <div class="key-color" style="background-color: #8e8e8e;"></div>
+                            <div class="key-color" style="background-color: #c7c7c7;"></div>
                             <div class="key-label">Other</div>
                         </div>
                     </div>
@@ -277,11 +314,11 @@
                     <div class="key">
                         <div class="axis-title key-title">Moral Views</div>
                         <div>
-                            <div class="key-color" style="background-color: #40adad;"></div>
+                            <div class="key-color" style="background-color: #73d9c6;"></div>
                             <div class="key-label">Male</div>
                         </div>
                         <div>
-                            <div class="key-color" style="background-color: #d34c69;"></div>
+                            <div class="key-color" style="background-color: #de7c90;"></div>
                             <div class="key-label">Female</div>
                         </div>
                     </div>
@@ -305,7 +342,7 @@
                     <a target="_blank" href="https://outrightinternational.org/">Outright International</a>
                 </div>
             </footer>
-        </section>
+        </section> -->
     </main>
 </body>
 </html>
