v10 - added emphasis to all quotes

--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
                 <h2>People in younger generations are becoming more open about their identities than those in the past, and discovering who they are.</h2>
                 <hr class="content-rule">
                 <div class="graph-quote">
-                    <blockquote style="animation-delay: calc(4.25s - var(--scroll)*1s);">
-                        <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
-                        <p>I, like many, grew up not knowing I was queer till I was an adult. I grew up in an unaccepting environment where LGBT anything was shunned and I internalized some of that. <em>I’m really glad that today’s youth get at least a bit more acceptance and I hope that tomorrow’s youth will get even more.</em> I hope that someday, being LGBT is so normalized that coming out won’t even be a thing. That someday straight and cis will no longer be assumed to be “the default” with LGBT being “the other”.</p>
-                        <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
-                        <a target="_blank" href="https://www.reddit.com/r/lgbt/comments/1cu6bfi/comment/l4iwzvt/">Original Post</a>
-                    </blockquote>
-                    <div class="graph" style="animation-delay: calc(5.25s - var(--scroll)*1s);">
+                    <div class="graph" style="animation-delay: calc(4.25s - var(--scroll)*1s);">
                         <h3>US Self-Identified LGBTQ+ Individuals by Generation</h3>
                         <figure>
                             <div class="axis-title side-axis-title">Percentage</div>
@@ -94,6 +88,12 @@
                             <a target="_blank" href="https://news.gallup.com/poll/611864/lgbtq-identification.aspx">Source Data: Gallup LGBTQ+ Identification Poll</a>
                         </figcaption>
                     </div>
+                    <blockquote style="animation-delay: calc(5.25s - var(--scroll)*1s);">
+                        <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
+                        <p>I, like many, grew up not knowing I was queer till I was an adult. I grew up in an unaccepting environment where LGBT anything was shunned and I internalized some of that. <em>I’m really glad that today’s youth get at least a bit more acceptance and I hope that tomorrow’s youth will get even more.</em> I hope that someday, being LGBT is so normalized that coming out won’t even be a thing. That someday straight and cis will no longer be assumed to be “the default” with LGBT being “the other”.</p>
+                        <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
+                        <a target="_blank" href="https://www.reddit.com/r/lgbt/comments/1cu6bfi/comment/l4iwzvt/">Original Post</a>
+                    </blockquote>
                 </div>
             </div>
             <div class="snap"></div>
@@ -104,13 +104,7 @@
                 <h2>At the same time, people in the US are slowly becoming more accepting of those in the community, allowing others to be more open and express themselves more freely.</h2>
                 <hr class="content-rule">
                 <div class="graph-quote">
-                    <blockquote style="animation-delay: calc(6.25s - var(--scroll)*1s);">
-                        <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
-                        <p>Being queer is being more accepted as time goes on; people are more comfortable to be open about their sexuality if they’re not ridiculed for it. The digital age also allows for more opportunities to communicate with other queer people and enhance that sense of community. There are heaps of [organizations] supporting queer youths. All these things contribute to creating a safer environment.</p>
-                        <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
-                        <a target="_blank" href="https://www.reddit.com/r/TooAfraidToAsk/comments/tnks1m/comment/i22drf4/">Original Post</a>
-                    </blockquote>
-                    <div class="graph" style="animation-delay: calc(7.25s - var(--scroll)*1s);">
+                    <div class="graph" style="animation-delay: calc(6.25s - var(--scroll)*1s);">
                         <h3>US Moral Views of Gay and Lesbian Relationships Over Time</h3>
                         <figure>
                             <div class="axis-title side-axis-title">Percentage</div>
@@ -151,6 +145,12 @@
                             <a target="_blank" href="https://news.gallup.com/poll/646202/sex-relations-marriage-supported.aspx">Source Data: Gallup LGBTQ+ Moral Views Poll</a>
                         </figcaption>
                     </div>
+                    <blockquote style="animation-delay: calc(7.25s - var(--scroll)*1s);">
+                        <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
+                        <p><em>Being queer is being more accepted as time goes on; people are more comfortable to be open about their sexuality if they’re not ridiculed for it.</em> The digital age also allows for more opportunities to communicate with other queer people and enhance that sense of community. There are heaps of [organizations] supporting queer youths. All these things contribute to creating a safer environment.</p>
+                        <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
+                        <a target="_blank" href="https://www.reddit.com/r/TooAfraidToAsk/comments/tnks1m/comment/i22drf4/">Original Post</a>
+                    </blockquote>
                 </div>
             </div>
             <div class="snap"></div>
@@ -161,13 +161,7 @@
                 <h2>However there are still many who believe that LGBTQ+ individuals don’t deserve basic rights, and laws are being created that actively infringe on those rights, moving the needle backwards.</h2>
                 <hr class="content-rule">
                 <div class="graph-quote">
-                    <blockquote style="animation-delay: calc(8.25s - var(--scroll)*1s);">
-                        <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
-                        <p>Every day it seems like I hear more and more anti-LGBT laws and bills are being proposed and passed. [...] I used to be FILLED with hope for the future, I used to think that it’ll all get better. [...] [But] this past year, it’s all quickly gone away. I’ve been living better than I ever have [these] past few months. [...] I’ve started HRT, moved away from my transphobic grandparents and I’m with my loving partner. Happier than I’ve ever been. But it feels like I’m not allowed to celebrate, like no matter what I do [it’s] not gonna matter soon.</p>
-                        <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
-                        <a target="_blank" href="https://www.reddit.com/r/lgbt/comments/1bapqls/is_everything_really_gonna_be_alright_in_the_usa/">Original Post</a>
-                    </blockquote>
-                    <div class="graph" style="animation-delay: calc(9.25s - var(--scroll)*1s);">
+                    <div class="graph" style="animation-delay: calc(8.25s - var(--scroll)*1s);">
                         <h3>Number of Anti-LGBTQ+ Bills Introduced Per Year</h3>
                         <figure>
                             <div class="axis-title side-axis-title">Bills Introduced</div>
@@ -196,6 +190,12 @@
                             <a target="_blank" href="https://www.cnn.com/politics/anti-lgbtq-plus-state-bill-rights-dg/index.html">Source Data: CNN Anti-LGBTQ+ State Bill Rights</a>
                         </figcaption>
                     </div>
+                    <blockquote style="animation-delay: calc(9.25s - var(--scroll)*1s);">
+                        <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
+                        <p>Every day it seems like I hear more and more anti-LGBT laws and bills are being proposed and passed. [...] <em>I used to be FILLED with hope for the future, I used to think that it’ll all get better. [...] [But] this past year, it’s all quickly gone away.</em> I’ve been living better than I ever have [these] past few months. [...] I’ve started HRT, moved away from my transphobic grandparents and I’m with my loving partner. Happier than I’ve ever been. But it feels like I’m not allowed to celebrate, like no matter what I do [it’s] not gonna matter soon.</p>
+                        <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
+                        <a target="_blank" href="https://www.reddit.com/r/lgbt/comments/1bapqls/is_everything_really_gonna_be_alright_in_the_usa/">Original Post</a>
+                    </blockquote>
                 </div>
             </div>
             <div class="snap"></div>
@@ -206,13 +206,7 @@
                 <h2>And not everyone is silent in their opposition. People are consistently attacked just for existing as themselves, and it is not always safe to be open about your identity with many having to hide their true selves from the world.</h2>
                 <hr class="content-rule">
                 <div class="graph-quote">
-                    <blockquote style="animation-delay: calc(10.25s - var(--scroll)*1s);">
-                        <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
-                        <p>I was biking to school one morning and I had [a pride pin] on my backpack. I was taking the route I usually took and I didn’t really think I was in that much danger. But some truck was behind me and I kid you not he SWERVED INTO THE BIKE LANE TO TRY AND HIT ME. I was able to pull my bike onto the sidewalk in time and he just drove off and screamed “QUEER!” really angrily out the window. [...] This really shook me up, not just in the fact that I had almost died but because I grew up in such a sheltered community with such supportive friends and family, I kind of forgot that people would do this kind of shit. Anyways I took the pin off, I just haven’t really felt that safe ever since that incident.</p>
-                        <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
-                        <a target="_blank" href="https://www.reddit.com/r/lgbt/comments/1e5rr5r/i_think_someone_tried_to_hate_crime_me/">Original Post</a>
-                    </blockquote>
-                    <div class="graph" style="animation-delay: calc(11.25s - var(--scroll)*1s);">
+                    <div class="graph" style="animation-delay: calc(10.25s - var(--scroll)*1s);">
                         <h3>Percentage of LGBTQ+ Youth Harmed For Their Identity</h3>
                         <figure>
                             <div class="axis-title side-axis-title">Percentage</div>
@@ -254,6 +248,12 @@
                             <a target="_blank" href="https://www.thetrevorproject.org/survey-2022/#threatened-by-sexual-orientation">Source Data: The Trevor Project 2022 Survey</a>
                         </figcaption>
                     </div>
+                    <blockquote style="animation-delay: calc(11.25s - var(--scroll)*1s);">
+                        <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
+                        <p>I was biking to school one morning and I had [a pride pin] on my backpack. I was taking the route I usually took and I didn’t really think I was in that much danger. But some truck was behind me and I kid you not he SWERVED INTO THE BIKE LANE TO TRY AND HIT ME. I was able to pull my bike onto the sidewalk in time and he just drove off and screamed “QUEER!” really angrily out the window. [...] This really shook me up, not just in the fact that I had almost died but because I grew up in such a sheltered community with such supportive friends and family, I kind of forgot that people would do this kind of shit. Anyways I took the pin off, <em>I just haven’t really felt that safe ever since that incident.</em></p>
+                        <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
+                        <a target="_blank" href="https://www.reddit.com/r/lgbt/comments/1e5rr5r/i_think_someone_tried_to_hate_crime_me/">Original Post</a>
+                    </blockquote>
                 </div>
             </div>
             <div class="snap"></div>
@@ -264,13 +264,7 @@
                 <h2>But the negative impacts don’t stop with direct acts of hate. These harmful attitudes affect nearly every part of their lives like job prospects and healthcare, and lead to detrimental mental health issues.</h2>
                 <hr class="content-rule">
                 <div class="graph-quote">
-                    <blockquote style="animation-delay: calc(12.25s - var(--scroll)*1s);">
-                        <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
-                        <p>Since coming out as trans and explaining that I have queer attraction to women, I have dealt with far more abuse. I am constantly belittled, invalidated, and dehumanized just for being myself and doing no harm to anyone whatsoever. The only person I harmed was myself prior to accepting my queerness; I used to regularly self-harm and I struggled for years with suicidal ideation. I’ve only recently in the last few years since I’ve accepted myself[,] felt like I don’t hate myself[,] and I don’t want to hurt myself anymore.</p>
-                        <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
-                        <a target="_blank" href="https://www.reddit.com/r/lgbt/comments/12shztd/older_lgbt_people_how_did_you_cope_and_survive/">Original Post</a>
-                    </blockquote>
-                    <div class="graph" style="animation-delay: calc(13.25s - var(--scroll)*1s);">
+                    <div class="graph" style="animation-delay: calc(12.25s - var(--scroll)*1s);">
                         <h3>Mental Illness Prevalance By Sexuality and Gender</h3>
                         <figure>
                             <div class="axis-title side-axis-title">Percentage</div>
@@ -307,6 +301,12 @@
                             <a target="_blank" href="https://www.samhsa.gov/newsroom/press-announcements/20230613/samhsa-releases-new-data-lesbian-gay-bisexual-behavioral-health">Source Data: SAMHSA 2021-2022 Behavioral Health Report</a>
                         </figcaption>
                     </div>
+                    <blockquote style="animation-delay: calc(13.25s - var(--scroll)*1s);">
+                        <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
+                        <p>Since coming out as trans and explaining that I have queer attraction to women, I have dealt with far more abuse. I am constantly belittled, invalidated, and dehumanized just for being myself and doing no harm to anyone whatsoever. <em>The only person I harmed was myself prior to accepting my queerness; I used to regularly self-harm and I struggled for years with suicidal ideation.</em> I’ve only recently in the last few years since I’ve accepted myself[,] felt like I don’t hate myself[,] and I don’t want to hurt myself anymore.</p>
+                        <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
+                        <a target="_blank" href="https://www.reddit.com/r/lgbt/comments/12shztd/older_lgbt_people_how_did_you_cope_and_survive/">Original Post</a>
+                    </blockquote>
                 </div>
             </div>
             <div class="snap"></div>
@@ -314,7 +314,7 @@
 
         <section id="outro">
             <div class="sticky-content">
-                <h2>All of this harm is being done, just for the desire for someone to be their true self, open and honestly to themselves and to the world. It doesn’t have to stay this way. We must fight for legislation that protects LGBTQ+ rights, fight against discrimination and violence, and fight for the right to be yourself.</h2>
+                <h2>All of this harm is being done, just for the desire for someone to be their true self, open and honestly to themselves and to the world. It doesn’t have to stay this way. We must fight for legislation that protects LGBTQ+ rights, fight against discrimination and violence, and <em>fight for the right to be yourself.</em></h2>
                 <footer>
                     <div id="footer-label">Learn More & Support the Cause</div>
                     <div id="footer-links">
