updated end text

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
         <section id="outro">
             <div class="sticky-content">
-                <h2>All of this harm is being done, just for the desire for someone to be their true self, open and honestly to themselves and to the world. It doesn’t have to stay this way. We must fight for legislation that protects LGBTQ+ rights, fight against discrimination and violence, and <em>fight for the right to be yourself.</em></h2>
+                <h2> All of this harm is being done to people who just want to express their true selves, and be open and honest to themselves and to the world. New legislation is being created to reverse our positive progress, and we must fight against it and protect LGBTQ+ rights. We must fight against the discrimination and violence against the community and its individuals. We must come together and <em>fight for the right to be yourself.</em></h2>
                 <footer>
                     <div id="footer-label">Learn More & Support the Cause</div>
                     <div id="footer-links">
