--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                             </div>
                             <img class="chart" style="padding-block: 0.5rem;" src="graphs/generations.svg">
                             <div class="axis-labels bottom-axis-labels" style="justify-content: space-around">
-                                <div style="width: calc(200%/15)">Silent Gen<br>(1928-1946)</div>
-                                <div style="width: calc(200%/15)">Baby Boomers<br>(1946-1964)</div>
-                                <div style="width: calc(200%/15)">Gen X<br>(1965-1980)</div>
-                                <div style="width: calc(200%/15)">Millennials<br>(1981-1996)</div>
-                                <div style="width: calc(200%/15)">Gen Z<br>(1997-2003)</div>
+                                <div style="width: calc(200%/15)"><span>Silent Gen<br>(1928-1946)</span></div>
+                                <div style="width: calc(200%/15)"><span>Baby Boomers<br>(1946-1964)</span></div>
+                                <div style="width: calc(200%/15)"><span>Gen X<br>(1965-1980)</span></div>
+                                <div style="width: calc(200%/15)"><span>Millennials<br>(1981-1996)</span></div>
+                                <div style="width: calc(200%/15)"><span>Gen Z<br>(1997-2003)</span></div>
                             </div>
                             <div class="axis-title bottom-axis-title">Generation</div>
                             <div class="key">
@@ -118,10 +118,10 @@
                             </div>
                             <img class="chart" style="padding-block: 0.5rem;" src="graphs/moral_views.svg">
                             <div class="axis-labels bottom-axis-labels" style="justify-content: center">
-                                <div style="width: calc(100%*5/23)">2005</div>
-                                <div style="width: calc(100%*5/23)">2010</div>
-                                <div style="width: calc(100%*5/23)">2015</div>
-                                <div style="width: calc(100%*5/23)">2020</div>
+                                <div style="width: calc(100%*5/23)"><span>2005</span></div>
+                                <div style="width: calc(100%*5/23)"><span>2010</span></div>
+                                <div style="width: calc(100%*5/23)"><span>2015</span></div>
+                                <div style="width: calc(100%*5/23)"><span>2020</span></div>
                             </div>
                             <div class="axis-title bottom-axis-title">Year</div>
                             <div class="key">
@@ -176,12 +176,12 @@
                             </div>
                             <img class="chart" style="padding-block: 0.5rem;" src="graphs/laws.svg">
                             <div class="axis-labels bottom-axis-labels" style="justify-content: space-around">
-                                <div style="width: calc(200%/18)">2018</div>
-                                <div style="width: calc(200%/18)">2019</div>
-                                <div style="width: calc(200%/18)">2020</div>
-                                <div style="width: calc(200%/18)">2021</div>
-                                <div style="width: calc(200%/18)">2022</div>
-                                <div style="width: calc(200%/18)">2023</div>
+                                <div style="width: calc(200%/18)"><span>2018</span></div>
+                                <div style="width: calc(200%/18)"><span>2019</span></div>
+                                <div style="width: calc(200%/18)"><span>2020</span></div>
+                                <div style="width: calc(200%/18)"><span>2021</span></div>
+                                <div style="width: calc(200%/18)"><span>2022</span></div>
+                                <div style="width: calc(200%/18)"><span>2023</span></div>
                             </div>
                             <div class="axis-title bottom-axis-title">Year</div>
                         </figure>
@@ -221,10 +221,16 @@
                             </div>
                             <img class="chart" style="padding-block: 0.5rem;" src="graphs/harmed_for_identity.svg">
                             <div class="axis-labels bottom-axis-labels" style="justify-content: center">
-                                <div style="width: calc(100%*5/23)">2005</div>
-                                <div style="width: calc(100%*5/23)">2010</div>
-                                <div style="width: calc(100%*5/23)">2015</div>
-                                <div style="width: calc(100%*5/23)">2020</div>
+                                <div style="width: calc(100%/10)"><span>Trans Man</span></div>
+                                <div style="width: calc(100%/10)"><span>Trans Women</span></div>
+                                <div style="width: calc(100%/10)"><span>Gay</span></div>
+                                <div style="width: calc(100%/10)"><span>Queer</span></div>
+                                <div style="width: calc(100%/10)"><span>Pansexual</span></div>
+                                <div style="width: calc(100%/10)"><span>Nonbinary/&ZeroWidthSpace;Genderqueer</span></div>
+                                <div style="width: calc(100%/10)"><span>Questioning</span></div>
+                                <div style="width: calc(100%/10)"><span>Queer</span></div>
+                                <div style="width: calc(100%/10)"><span>Bisexual</span></div>
+                                <div style="width: calc(100%/10)"><span>Asexual</span></div>
                             </div>
                             <div class="axis-title bottom-axis-title">Identity</div>
                             <div class="key">
@@ -279,9 +285,9 @@
                             </div>
                             <img class="chart" style="padding-block: 0.5rem;" src="graphs/mental_health.svg">
                             <div class="axis-labels bottom-axis-labels" style="justify-content: center">
-                                <div style="width: calc(200%*9)">Straight</div>
-                                <div style="width: calc(200%*9)">Bisexual</div>
-                                <div style="width: calc(200%*9)">Homosexual</div>
+                                <div style="width: calc(200%*9)"><span>Straight</span></div>
+                                <div style="width: calc(200%*9)"><span>Bisexual</span></div>
+                                <div style="width: calc(200%*9)"><span>Homosexual</span></div>
                             </div>
                             <div class="axis-title bottom-axis-title">Identity</div>
                             <div class="key">
